2006-02-26  Alex Roitman  <shura@gramps-project.org>
	* gramps.sh.in: Update copyright year.
	* src/po/Makefile.am (.po.mo): Avoid using temp file as it breaks
	distcheck -- use pipe instead.

2006-02-26  Doug Blank  <Doug.Blank@gmail.com>
	* src/plugins/Calendar.py (Widget.register): Do not add help
	strings to style widgets.

2006-02-24  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* configure.in: Bump up the release number.
	* test/runtest.sh (GRPH_REP): Add calendar to the list of reports.
	* src/plugins/Calendar.py: Remove the unsupported flag.

2006-02-24  Marcos Bedinelli  <bedinelli@yahoo.ca>
	* src/po/pt_BR.po: Update.

2006-02-23  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Calendar.py: Remove translation from help strings;
	do not import unused modules.
	* src/po/template.po: Update.

2006-02-22  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Calendar.py (Calendar.__getitem__,
	Widget.__getitem__): No translation for exception messages.
	* src/po/template.po: Update.
	* src/po/ru.po: Update.

2006-02-22  Arturas Sleinius <asleiniu@one.lt>
	* src/dates/Date_lt.py: new Lithuanian date handler
	* src/po/lt.po: updated Lithuanian translation

2006-02-19  Soren Roug  <roug@users.sourceforge.net>
	* src/WriteXML.py: encode paths for objects in XML to handle
	&, > and < in paths.

2006-02-19  Don Allingham  <don@gramps-project.org>
	* src/ImageSelect.py: fix already_loaded initalization

2006-02-18  Don Allingham  <don@gramps-project.org>
	* src/plugins/Makefile.am: added Calendary.py and
	holidays.xml
	* src/po/template.po: updated

2006-02-18  Doug Blank  <Doug.Blank@gmail.com>
	* src/plugins/Calendar.py: added
	* src/plugins/holidays.xml: added

2006-02-17  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/FamilyGroup.py (dump_parent): Translate event names.

2005-02-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/po/de.po: Translation update

2006-02-16  Don Allingham  <don@gramps-project.org>