@@ -1,3 +1,7 @@
+2006-02-26  Don Allingham  <don@gramps-project.org>
+	* src/plugins/ImportGeneWeb.py: handle people with no firstname
+	or lastname, if encoding fails, attempt and iso-8859-1 conversion
+
 2006-02-26  Alex Roitman  <shura@gramps-project.org>
 	* gramps.sh.in: Update copyright year.
 	* src/po/Makefile.am (.po.mo): Avoid using temp file as it breaks
